  - UI Review trough many admin pages
  - New jquery based page selector.
  - Improved and documented htaccess.txt file
  - Many new smarty plugins to aid in module development and separation of logic from display
  - adds the {cms_module_hint} plugin
  - {content},{content_image},and {content_module} plugins all receive the required attribute
  - {content} tag now has the placeholder attribute.

Core - Bug Reports
  -

Core - Feature Requests:
  - #4178 Improve behavior of cms_selflink
  
FileManager
  - Numerous UI improvements
  - Adds ajaxy image cropping/resizing/rotation
  
MenuManager
  - Deprecated

Navigator
  - New module to replace MenuManager
  
MicroTiny
  -
 
AdinSearch
  - New module for searching for tags and any content in templates.

CMSContentManager
  - New module for content editing.
  - Pagination and filtering in listcontent
  - Implements content locking
  - Implements dirty form checking 

DesignManager
  - New module for managing templates, stylesheets
  - Implements dirty form checking
  - Implements locking for templates
 
News 
  - Each article now has a searchable option
  - More bulk actions
  - A dropdown field type
  - The ability to re-organize categories
  - Numerous UI improvements
  - Minor bug fixes
  - Implements dirty form checking
  - Query rework (post date is now used as a start date if expiry is not specified)

Search
  - No longer indexes templates, or GCB's
  - rewrite the reindex stuff to hopefully use a bit less memory (at least for content pages)

  
Version 1.11.7 - Genovesa
-----------------------------
Core - General
  - Added set_db_timezone config option which will execute the mysql command SET timezone attempting to solve the problem with date calculates wrt
    server timezone vs. user timezone.  Config option defaults to FALSE until CMSMS 2.0
  - Fixes BR#9269. Now it actually validates if output of get_real_ip() is actual IP address. Added another validation to login.php