@@ -14,6 +14,7 @@ Core - General
   - adds the {cms_module_hint} plugin
   - {content},{content_image},and {content_module} plugins all receive the required attribute
   - {content} tag now has the placeholder attribute.
+  - major accessibility review throughout admin interface.
 
 Core - Bug Reports
   -
